tests/record/record.exp
test.js:4
  4:   bar: "", // error: string ~/~ number
            ^^ string. This type is incompatible with
  2: var o1: {[key: Key1]: number} = {
                           ^^^^^^ number

test.js:7
  7: o1.qux; // error: qux not found
     ^^^^^^ property `qux` is a string. This type is incompatible with
  2: var o1: {[key: Key1]: number} = {
                    ^^^^ string enum

test.js:14
 14: o2.qux; // error: qux not found
     ^^^^^^ property `qux`. Property not found in
 12: var o2: {[key: Key2]: number} = { foo: 0 }; // OK to leave out bar
                    ^^^^ object type

test.js:20
 20:   x: { foo: number, qux: boolean }; // error: qux not found
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `qux`. Property not found in
 17:   x: $Subtype<{[key: $Keys<X>]: any}>; // object with larger key set than X's
                          ^^^^^^^^ object type


Found 4 errors
